// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList w/ empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--empty"
    >
      <p>
        No expenses
      </p>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList w/ expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1000}
      createdAt={-345600000}
      description="Sledge 1"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={3000}
      createdAt={0}
      description="Creep 2"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={2000}
      createdAt={345600000}
      description="Zombat 3"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
